package com.lab111.labwork2;

/**
 * Інтерфейс If1 наслідує If2 та оголошує метод meth1.
 */
public interface If1 extends If2 {
    /**
     * Виводить назву методу та клас-реалізацію.
     */
    void meth1();
}
