package com.lab111.labwork2;

/**
 * Базовий інтерфейс If2 оголошує метод meth2.
 */
public interface If2 {
    /**
     * Виводить назву методу та клас-реалізацію.
     */
    void meth2();
}
