package com.lab111.labwork2;

/**
 * Інтерфейс If3 наслідує If1 та оголошує метод meth3.
 */
public interface If3 extends If1 {
    /**
     * Виводить назву методу та клас-реалізацію.
     */
    void meth3();
}
