classDiagram
    %% Interfaces hierarchy with generalization
    If2 <|-- If1 : extends
    If1 <|-- If3 : extends

    %% Interface definitions
    class If2 {
        <<interface>>
        +meth2() void
    }

    class If1 {
        <<interface>>
        +meth1() void
    }

    class If3 {
        <<interface>>
        +meth3() void
    }

    %% Class hierarchy - generalization
    Cl3 <|-- Cl2 : extends

    %% Class definitions
    class Cl1 {
        -List~If1~ if1Parts
        -If2 if2Part
        +Cl1()
        +addIf1Part(If1) void
        +getIf1Parts() List~If1~
        +setIf2Part(If2) void
        +getIf2Part() If2
        +meth1() void
        +meth2() void
    }

    class Cl2 {
        +Cl2()
        +meth1() void
        +meth2() void
    }

    class Cl3 {
        -Cl2 aggregatedCl2
        +Cl3()
        +setAggregatedCl2(Cl2) void
        +getAggregatedCl2() Cl2
        +meth1() void
        +meth2() void
        +meth3() void
    }

    %% Realization relationships
    If1 <|.. Cl1 : implements
    If2 <|.. Cl2 : implements
    If3 <|.. Cl3 : implements

    %% Aggregation relationships
    Cl1 o-- If1 : aggregates
    Cl1 o-- If2 : aggregates
    Cl3 o-- Cl2 : aggregates

    %% Notes
    note for If2 "Базовий інтерфейс"
    note for If1 "Наслідує If2"
    note for If3 "Наслідує If1"
    note for Cl3 "Базовий клас"
    note for Cl2 "Наслідує Cl3"
    note for Cl1 "Реалізує If1, агрегує If1 та If2"


